apps/productivity/dashlit/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashlit
  namespace: dashlit
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashlit.internal.crussell.io`)
      kind: Rule
      services:
        - name: dashlit
          port: 3000
  tls:
    certResolver: letsencrypt
